# TicTacToe-net

./: .gitignore  CMakeLists.txt
apps/client/: CMakeLists.txt  main.cpp
apps/client_gui/: CMakeLists.txt  connection_dialog.cpp  connection_dialog.h  game_window.cpp  game_window.h  main.cpp
apps/server/: CMakeLists.txt  main.cpp
config/: default.conf
docs/: README.md  README.md.save
include/config/: parser.h
include/core/: board.h
include/net/: protocol.h  socket.h
packaging/: CPackConfig.cmake
src/config/: CMakeLists.txt  parser.cpp
src/core/: CMakeLists.txt  board.cpp
src/net/: CMakeLists.txt  protocol.cpp  socket.cpp
tests/: CMakeLists.txt  test_board.cpp
